<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ema="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TransferActivity" >

    <EditText
        android:id="@+id/inputName"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:maxLength="35" />

    <EditText
        android:id="@+id/accountNumber"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:hint="@string/accountNumberHint"
        android:inputType="number"
        android:maxLength="12" />

    <EditText
        android:id="@+id/bankCode"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:hint="@string/bankCodeHint"
        android:inputType="number"
        android:maxLength="8" />

    <EditText
        android:id="@+id/amount"
        android:layout_gravity="fill"
        android:hint="@string/amountHint"
        android:inputType="numberDecimal">
        <requestFocus />
    </EditText>

    <!--
         <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|top" />
    -->

    <hochschuletrier.ema.customviews.EUCurrencySpinner
        android:id="@+id/currencySpinner"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|top"
        ema:includeUSD="true" />

    <EditText
        android:id="@+id/reference1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:hint="@string/reference1Hint"
        android:maxLength="35" />

    <EditText
        android:id="@+id/reference2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:hint="@string/reference2Hint"
        android:maxLength="35" />

    <Button
        android:id="@+id/executeButton"
        android:layout_columnSpan="2"
        android:layout_gravity="left|right|top"
        android:text="@string/executeButtonText" />

</GridLayout>